# space-invaders

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: gl.h  glad.h
src/: main.cpp
